# S3Fit

./: .gitignore  LICENSE  README.md  example.ipynb  pyproject.toml  s3fit.py
.github/workflows/: release_to_pypi.yml
auxiliaries/: pyproject.toml
auxiliaries/sefi/: __init__.py
example/: example.ipynb  example_spec_tw.fits
examples/: example_galaxy.ipynb  example_quasar.ipynb  example_quasar_spec_w.fits
manuals/: advanced_usage.md  basic_usage.md  fitting_strategy.md  full_parameter_list.md  readme_jp.md
model_libraries/: agn_iron_for_s3fit.fits  convert_skirtor_torus.py
models/: convert_popstar_ssp.py  convert_skirtor_torus.py  convert_ssp_templates.py  skirtor_for_s3fit.fits
s3fit/: __init__.py  auxiliary_func.py  config_frame.py  extinct_law.py  fit_frame.py  phot_frame.py
s3fit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
s3fit/auxiliaries/: auxiliary_frames.py  auxiliary_functions.py  basic_model_functions.py  extinct_laws.py
s3fit/model_frames/: __init__.py  agn_frame.py  eline_frame.py  line_frame.py  ssp_frame.py  stellar_frame.py  torus_frame.py  torus_frame_副本.py  torus_frame_副本2.py
