[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "s3fit"
version = "2.0.1"
description = "S3Fit: a Simultaneous Spectrum and photometric-SED Fitting code for observation of galaxies"
authors = [
    { name = "Xiaoyang Chen", email = "xiaoyang.chen.cz@gmail.com" }
]
license = "GPL-3.0-or-later"
readme = "README.md"
keywords = ["spectral fitting", "SED fitting", "galaxy", "astronomy"]

classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 4 - Beta",
  # Indicate who your project is intended for
  "Topic :: Scientific/Engineering :: Astronomy",
  # Specify the Python versions you support here.
  "Programming Language :: Python :: 3.10",
]

requires-python = ">= 3.10"
dependencies = [
"scipy>=1.12",
"numpy>=1.26",
"astropy>=6.0",
"matplotlib>=3.9"
]

[project.optional-dependencies]
pyneb = ["pyneb>=1.1.23"]
# install with pyneb:
# pip install s3fit[pyneb] 

[project.urls]
Homepage = "https://github.com/xychcz"
Repository = "https://github.com/xychcz/S3Fit"
Documentation = "https://github.com/xychcz/S3Fit/tree/main/manuals"
Changelog = "https://github.com/xychcz/S3Fit/releases"