[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sefi"
version = "2.2.4"
description = "Alias package for S3Fit (Simultaneous Spectrum and photometric-SED Fitting code for observation of galaxies)"
authors = [
    { name = "Xiaoyang Chen", email = "s3fit@xychen.me" }
]
license = "GPL-3.0-or-later"
readme = "../README.md"
keywords = ["spectral fitting", "SED fitting", "galaxy", "astronomy"]

classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 5 - Production/Stable",
  # Indicate who your project is intended for
  "Topic :: Scientific/Engineering :: Astronomy",
  # Specify the Python versions you support here.
  "Programming Language :: Python :: 3.10",
]

requires-python = ">= 3.10"
dependencies = [
  "s3fit>=2.2.4",
]

[project.optional-dependencies]
pyneb = ["pyneb>=1.1.23"]
# install with pyneb:
# pip install s3fit[pyneb] 

[project.urls]
Homepage = "https://github.com/xychcz"
Repository = "https://github.com/xychcz/S3Fit"
Documentation = "https://github.com/xychcz/S3Fit/tree/main/manuals"
Changelog = "https://github.com/xychcz/S3Fit/releases"
